--- a/po/ta.po
+++ b/po/ta.po
@@ -1852,7 +1852,7 @@ msgstr "இயற்று"
 
 #: js/messages.php:324
 msgid "Change Password"
-msgstr ""
+msgstr "கடவுச்சொல்லை மாற்று"
 
 #: js/messages.php:327 tbl_structure.php:464
 #, fuzzy
