--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 08:33+0200\n"
+"PO-Revision-Date: 2011-08-19 08:35+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -1895,7 +1895,7 @@ msgstr "அடுத்த"
 #. l10n: Display text for current month link in calendar
 #: js/messages.php:364
 msgid "Today"
-msgstr ""
+msgstr "இன்று"
 
 #: js/messages.php:367
 #, fuzzy
