--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 08:37+0200\n"
+"PO-Revision-Date: 2011-08-19 08:38+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -2037,7 +2037,7 @@ msgstr "செவ்வாய்"
 
 #: js/messages.php:410
 msgid "Wednesday"
-msgstr ""
+msgstr "புதன்"
 
 #: js/messages.php:411
 msgid "Thursday"
