--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 08:38+0200\n"
+"PO-Revision-Date: 2011-08-19 08:39+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -2093,10 +2093,9 @@ msgstr "சனி"
 
 #. l10n: Minimal week day name
 #: js/messages.php:433
-#, fuzzy
 #| msgid "Sun"
 msgid "Su"
-msgstr "ஞாயிறு"
+msgstr "ஞாயி"
 
 #. l10n: Minimal week day name
 #: js/messages.php:435
