--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 08:39+0200\n"
+"PO-Revision-Date: 2011-08-19 08:40+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -2136,7 +2136,7 @@ msgstr "சனி"
 #. l10n: Column header for week of the year in calendar
 #: js/messages.php:447
 msgid "Wk"
-msgstr ""
+msgstr "கிழமை"
 
 #: js/messages.php:449
 msgid "Hour"
