Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 08:40+0200\n"
+"PO-Revision-Date: 2011-08-19 08:41+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -2148,7 +2148,7 @@ msgstr "நிமிடம்"
 
 #: js/messages.php:451
 msgid "Second"
-msgstr ""
+msgstr "வினாடிகள்"
 
 #: libraries/Advisor.class.php:145
 #, php-format
