Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 08:41+0200\n"
+"PO-Revision-Date: 2011-08-19 08:42+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -2183,7 +2183,7 @@ msgstr ""
 
 #: libraries/File.class.php:287
 msgid "Missing a temporary folder."
-msgstr ""
+msgstr "ஒரு தற்காலிய உறையை காணவில்லை"
 
 #: libraries/File.class.php:290
 msgid "Failed to write file to disk."
