--- a/po/ta.po
+++ b/po/ta.po
@@ -2224,7 +2224,7 @@ msgstr "சுட்டுகள்"
 #: tbl_structure.php:155 tbl_structure.php:160 tbl_structure.php:573
 #: tbl_tracking.php:306
 msgid "Unique"
-msgstr ""
+msgstr "தனித்தன்மை"
 
 #: libraries/Index.class.php:435 tbl_tracking.php:307
 msgid "Packed"
