Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 08:45+0200\n"
+"PO-Revision-Date: 2011-08-19 08:46+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -2267,7 +2267,7 @@ msgstr "தரவுத்தளங்கள்"
 #: libraries/core.lib.php:210 libraries/import.lib.php:140 tbl_change.php:905
 #: tbl_operations.php:229 tbl_relation.php:287 view_operations.php:60
 msgid "Error"
-msgstr ""
+msgstr "வலு"
 
 #: libraries/Message.class.php:241
 #, php-format
