--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 08:48+0200\n"
+"PO-Revision-Date: 2011-08-19 08:49+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -2371,7 +2371,7 @@ msgstr ""
 
 #: libraries/Theme.class.php:343
 msgid "take it"
-msgstr ""
+msgstr "அதை ஏற்றுக்கொள்"
 
 #: libraries/Theme_Manager.class.php:110
 #, php-format
