--- a/po/ta.po
+++ b/po/ta.po
@@ -2424,7 +2424,7 @@ msgstr ""
 
 #: libraries/auth/cookie.auth.lib.php:199
 msgid "Log in"
-msgstr ""
+msgstr "உள்நுழையா"
 
 #: libraries/auth/cookie.auth.lib.php:201
 #: libraries/auth/cookie.auth.lib.php:203
