--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 08:50+0200\n"
+"PO-Revision-Date: 2011-08-19 08:51+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -2431,7 +2431,7 @@ msgstr "உள்நுழையா"
 #: libraries/navigation_header.inc.php:92
 #: libraries/navigation_header.inc.php:96
 msgid "phpMyAdmin documentation"
-msgstr ""
+msgstr "phpMyAdmin ஆவணச்சான்று"
 
 #: libraries/auth/cookie.auth.lib.php:213
 #: libraries/auth/cookie.auth.lib.php:214
