--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 08:52+0200\n"
+"PO-Revision-Date: 2011-08-19 08:53+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -2520,7 +2520,7 @@ msgstr ""
 
 #: libraries/blobstreaming.lib.php:363
 msgid "View image"
-msgstr ""
+msgstr "படத்தை பார்"
 
 #: libraries/blobstreaming.lib.php:367
 msgid "Play audio"
