Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 08:53+0200\n"
+"PO-Revision-Date: 2011-08-19 08:54+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -2524,7 +2524,7 @@ msgstr "படத்தை பார்"
 
 #: libraries/blobstreaming.lib.php:367
 msgid "Play audio"
-msgstr ""
+msgstr "கேட்பொலியை ஒலிக்கச்செய்"
 
 #: libraries/blobstreaming.lib.php:372
 msgid "View video"
