Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 08:59+0200\n"
+"PO-Revision-Date: 2011-08-19 09:00+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -2704,7 +2704,7 @@ msgstr ""
 
 #: libraries/common.lib.php:1132 libraries/config/messages.inc.php:481
 msgid "Create PHP Code"
-msgstr ""
+msgstr "PHP குறிமுறை உருவாக்கு"
 
 #: libraries/common.lib.php:1151 libraries/config/messages.inc.php:480
 #: server_status.php:697 server_status.php:719 server_status.php:738
