Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -2884,7 +2884,7 @@ msgstr ""
 
 #: libraries/config.values.php:47
 msgid "Left"
-msgstr ""
+msgstr "இடது"
 
 #: libraries/config.values.php:47
 msgid "Right"
