Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -2892,7 +2892,7 @@ msgstr "வலது"
 
 #: libraries/config.values.php:75
 msgid "Open"
-msgstr ""
+msgstr "திற"
 
 #: libraries/config.values.php:75
 msgid "Closed"
