Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -2908,7 +2908,7 @@ msgstr "கட்டமைப்பு"
 #: libraries/export/latex.php:42 libraries/export/odt.php:34
 #: libraries/export/sql.php:130 libraries/export/texytext.php:24
 msgid "data"
-msgstr ""
+msgstr "தரவு"
 
 #: libraries/config.values.php:98 libraries/export/htmlword.php:25
 #: libraries/export/latex.php:42 libraries/export/odt.php:34
