Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -11011,7 +11011,7 @@ msgstr ""
 
 #: view_create.php:141
 msgid "VIEW name"
-msgstr ""
+msgstr "பெயரை பார்"
 
 #: view_operations.php:91
 msgid "Rename view to"
