Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 09:17+0200\n"
+"PO-Revision-Date: 2011-08-19 09:18+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -10771,7 +10771,7 @@ msgstr "புதிய பயனாளரை சேர்க்க"
 
 #: tbl_structure.php:620
 msgid "Relation view"
-msgstr ""
+msgstr "தொடர்பு பார்வை"
 
 #: tbl_structure.php:626
 msgid "Propose table structure"
