Translation update done using Pootle.

--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 09:18+0200\n"
+"PO-Revision-Date: 2011-08-19 09:19+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -10664,7 +10664,7 @@ msgstr ""
 
 #: tbl_printview.php:378 tbl_structure.php:892
 msgid "Row size"
-msgstr ""
+msgstr "நிரல் அளவு"
 
 #: tbl_printview.php:388 tbl_structure.php:900
 msgid "Next autoindex"
