--- a/po/ta.po
+++ b/po/ta.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 09:20+0200\n"
+"PO-Revision-Date: 2011-08-19 09:21+0200\n"
 "Last-Translator:  <ysajeepan@live.com>\n"
 "Language-Team: Tamil <ta@li.org>\n"
 "Language: ta\n"
@@ -10652,7 +10652,7 @@ msgstr ""
 
 #: tbl_printview.php:344 tbl_structure.php:839
 msgid "static"
-msgstr ""
+msgstr "மாறா"
 
 #: tbl_printview.php:346 tbl_structure.php:841
 msgid "dynamic"
