Translation update done using Pootle.

--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 11:21+0200\n"
+"PO-Revision-Date: 2011-08-19 11:24+0200\n"
 "Last-Translator: Domen <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -1876,6 +1876,9 @@ msgid ""
 "This table does not contain a unique column. Features related to the grid "
 "edit, checkbox, Edit, Copy and Delete links may not work after saving."
 msgstr ""
+"Tabela ne vsebuje unikatnega stolpca. Zmožnosti, povezane z urejanjem mreže, "
+"potrditvenimi polji, povezavami Uredi, Kopiraj in Izbriši, po shranjevanju "
+"morda ne bodo delovale."
 
 #: js/messages.php:318
 msgid ""
