Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-18 10:40+0200\n"
+"PO-Revision-Date: 2011-08-19 14:31+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -12145,6 +12145,13 @@ msgid ""
 "(often invalidated due to table updates) increasing {query_cache_limit} "
 "might reduce efficiency."
 msgstr ""
+"{query_cache_limit} değiştirmek (genelde artarak) etkiyi arttırabilir. Bu "
+"değişken en fazla boyutu belirler sorgu sonucu sorgu önbelleği içine "
+"eklenebilmek zorundadır. Eğer 1 MiB'ın üstünde iyi önbelleklenebilir (çok "
+"okuma, az yazma) birçok sorgu sonucu varsa sonrasında {query_cache_limit} "
+"arttırmak etkiyi arttıracaktır. Halbuki çoğu sonucun iyi önbelleklenemeyen 1 "
+"MiB'ın üzerinde olması durumunda {query_cache_limit} arttırmak etkiyi "
+"azaltacaktır."
 
 #: po/advisory_rules.php:103
 msgid "query_cache_limit is set to 1 MiB"
