--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 14:31+0200\n"
+"PO-Revision-Date: 2011-08-19 14:32+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -3075,7 +3075,7 @@ msgstr "Sıfırla"
 
 #: libraries/config/messages.inc.php:17
 msgid "Improves efficiency of screen refresh"
-msgstr "Ekran yenilemenin etkinliğini geliştirir"
+msgstr "Ekran yenileme etkinliğini geliştirir"
 
 #: libraries/config/messages.inc.php:18
 msgid "Enable Ajax"
