--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 14:36+0200\n"
+"PO-Revision-Date: 2011-08-19 16:12+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -10245,7 +10245,7 @@ msgid ""
 msgstr ""
 "Yapılması zorunlu sıralama algoritması birleştirme geçişi sayısıdır. Eğer bu "
 "değer büyükse, sort_buffer_size sistem değişkeninin değerini arttırmayı "
-"dikkate almalısınız."
+"düşünmelisiniz."
 
 #: server_status.php:1290
 msgid "The number of sorts that were done with ranges."
