Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-08-17 16:58+0200\n"
-"PO-Revision-Date: 2011-08-19 16:12+0200\n"
+"PO-Revision-Date: 2011-08-19 16:13+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -11976,9 +11976,10 @@ msgid ""
 "cache, especially if you have multiple slaves."
 msgstr ""
 "Oldukça yüksek trafikli veritabanı ile MySQL Sorgu önbelleği "
-"kullanıyorsunuz. MySQL Sorgu önbelleği yerine <a href=\\\"http://dev.mysql."
-"com/doc/refman/5.1/en/ha-memcached.html\\\">memcached</a> kullanmayı hesaba "
-"katmak değebilir özelliklede çoklu slave'lere sahipseniz."
+"kullanıyorsunuz. MySQL Sorgu önbelleği yerine <a "
+"href=\\\"http://dev.mysql.com/doc/refman/5.1/en/ha-"
+"memcached.html\\\">memcached</a> kullanmayı düşünmek değebilir özelliklede "
+"çoklu slave'lere sahipseniz."
 
 #: po/advisory_rules.php:73
 #, php-format
