Translation update done using Pootle.

--- a/po/tr.po
+++ b/po/tr.po
@@ -12000,7 +12000,7 @@ msgstr "Sorgu önbelleği verimli çalışmıyor, düşük tavan oranına sahip.
 
 #: po/advisory_rules.php:77
 msgid "Consider increasing {query_cache_limit}."
-msgstr "Dikkate değer artış {query_cache_limit}."
+msgstr "Dikkate değer {query_cache_limit} artışı."
 
 #: po/advisory_rules.php:78
 #, php-format
